2023-12-30  Bruno Haible  <bruno@clisp.org>

	Switch to autoconf 2.72.
	* autogen.sh: Update comment.

2023-09-18  Bruno Haible  <bruno@clisp.org>

	Fix shared library support on Android.
	Patch from <https://savannah.gnu.org/patch/index.php?10393>.
	* m4/libtool.m4: On Android, fix library_names_spec and
	hardcode_libdir_flag_spec.

2023-09-16  Bruno Haible  <bruno@clisp.org>

	Fix a misnomer.
	* include/export.h (LIBICONV_SHLIB_EXPORTED): Renamed from
	LIBICONV_DLL_EXPORTED. Prefer the term "shared library", since the term
	"DLL" applies only to Windows.
	* Makefile.devel (include/iconv.h.build.in): Insert
	LIBICONV_SHLIB_EXPORTED instead of LIBICONV_DLL_EXPORTED.
	* configure.ac (DLL_VARIABLE): Update comment.
	* lib/Makefile.in (DEFS): Update comment.
	* woe32dll/export.h: Update comment.

2023-09-13  Bruno Haible  <bruno@clisp.org>

	Simplify the library: Don't compile relocatable.c any more.
	The library does not need relocatable.h any more since 2018-09-22.
	* lib/relocatable.h: Remove file.
	* lib/relocatable.c: Remove file.
	* lib/compat.c: New file.
	* lib/Makefile.in (DEFS): Don't define LIBDIR, BUILDING_DLL,
	ENABLE_RELOCATABLE, IN_LIBRARY, INSTALLDIR, NO_XMALLOC,
	set_relocation_prefix, relocate, relocate2.
	(SOURCES): Remove relocatable.c. Add compat.c.
	(OBJECTS): Remove relocatable.lo. Add compat.lo.
	(localcharset.lo): Update dependencies.
	(relocatable.lo): Remove rule.
	(compat.lo): Add rule.
	(SOURCE_FILES): Remove relocatable.h, relocatable.c. Add compat.c.

2023-09-07  Bruno Haible  <bruno@clisp.org>

	Sync woe32dll/export.h with GNU libunistring and GNU gettext.
	* woe32dll/export.h: Update comments.
	(IMP): Define correctly for 64-bit Windows platforms.

2023-09-06  Bruno Haible  <bruno@clisp.org>

	Don't export symbols from static MSVC .obj files.
	Suggested by Dmitry Bely <dmitry.bely@gmail.com> in
	<https://lists.gnu.org/archive/html/bug-gnu-libiconv/2023-08/msg00002.html>.