@@ -1,5 +1,6 @@
-# alloca.m4 serial 5
-dnl Copyright (C) 2002-2003, 2006, 2011, 2021-2022 Free Software Foundation, Inc.
+# alloca.m4
+# serial 100
+dnl Copyright (C) 2002-2024 Free Software Foundation, Inc.
 dnl This file is free software; the Free Software Foundation
 dnl gives unlimited permission to copy and/or distribute it,
 dnl with or without modifications, as long as this notice is preserved.
